k8s/prometheus/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: public-gateway
      namespace: nginx-gateway
  hostnames:
    - rainercloud.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: grafana-snippets-filter
      backendRefs:
        - name: prometheus-grafana
          port: 80
